--- a/intex.html
+++ b/intex.html
@@ -10,12 +10,22 @@
     <title>Love Running</title>
 </head>
 <body>
-    <h1>Hello world</h1>
-    <p> HEllo test test terst</p>
+    <header>Header content</header>
+    <section>
+        Main Img
+    </section>
+
+    <section>
+        Club Ethos
+    </section>
+
+    <section>
+        Running locations, Distances and times
+    </section>
 
 
 
-
+    <footer> social links here</footer>
 
 </body>
 </html>
