--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         </nav>
     </header>
 
-    <section>
-        Main Img
+    <section id="hero-outer">
+        <div id="hero-image"></div>
     </section>
 
     <section>
