--- a/index.html
+++ b/index.html
@@ -44,8 +44,15 @@
 
     </section>
 
-    <section>
-        Club Ethos
+    <section id="club-ethos">
+        <h1>Why Love Running with Us?</h1>
+        <div id="left-about">LEft</div>
+        <div id="right-about">Right</div>
+        <div id="center-about">center</div>
+
+
+
+       
     </section>
 
     <section>
