--- a/index.html
+++ b/index.html
@@ -74,8 +74,6 @@
                     When we run with others, we can run farther and faster more easily. Social running can pull you out of a running funk or low mood, inspire you to try new events
                 </p>
             </div>
-               
-
                 <div class="right-about-heading">
                     <h2>Feel Strong <i class="fa-solid fa-dumbbell"></i></h2>
                     <hr>
@@ -87,27 +85,65 @@
 
         </div>
 
+
+
+
+
+
+
+
         <div id="center-about">
             <div id="circle-container">
                 <div id="circle-cover-bg">
 
-
-
                 </div>
             </div>
-
-
-
-
-
-
-
 
         </div>
     </section>
 
     <section>
-        Running locations, Distances and times
+        <div>
+            <h2>Urban</h2>
+            <h3>Monday</h3>
+            <h3>5K</h3>
+            <h3>The Marker Hotel</h3>
+            <h3>18:30</h3>
+        </div>
+
+        <div>
+            <h2>Trail</h2>
+            <h3>Wednesday</h3>
+            <h3>10K</h3>
+            <h3>The Pheonix Park</h3>
+            <h3>18:30</h3>
+        </div>
+
+        <div>
+            <h2>Urban</h2>
+            <h3>Friday</h3>
+            <h3>5K</h3>
+            <h3>The Marker Hotel</h3>
+            <h3>18:30</h3>
+        </div>
+
+        <div>
+            <h2>Trail</h2>
+            <h3>Saturday</h3>
+            <h3>10K</h3>
+            <h3>The Pheonix Park</h3>
+            <h3>9:30</h3>
+        </div>
+
+        <div>
+            <h2>Coffee</h2>
+            <h3>Sunday</h3>
+            <h3>0K</h3>
+            <h3>The MAerker Hotel</h3>
+            <h3>11:30</h3>
+        </div>
+
+
     </section>
 
 
