--- a/index.html
+++ b/index.html
@@ -40,8 +40,6 @@
 
         </div>
 
-
-
     </section>
 
     <section id="club-ethos">
@@ -84,14 +82,6 @@
                 </div>
 
         </div>
-
-
-
-
-
-
-
-
         <div id="center-about">
             <div id="circle-container">
                 <div id="circle-cover-bg">
@@ -102,9 +92,9 @@
         </div>
     </section>
 
-    <section>
+    <section id="times">
         <div>
-            <h2>Urban</h2>
+            <h2>Urban <i class="fa-solid fa-city"></i></h2>
             <h3>Monday</h3>
             <h3>5K</h3>
             <h3>The Marker Hotel</h3>
@@ -112,7 +102,7 @@
         </div>
 
         <div>
-            <h2>Trail</h2>
+            <h2>Trail <i class="fa-solid fa-tree"></i></h2>
             <h3>Wednesday</h3>
             <h3>10K</h3>
             <h3>The Pheonix Park</h3>
@@ -120,7 +110,7 @@
         </div>
 
         <div>
-            <h2>Urban</h2>
+            <h2>Urban <i class="fa-solid fa-city"></i></h2>
             <h3>Friday</h3>
             <h3>5K</h3>
             <h3>The Marker Hotel</h3>
@@ -128,7 +118,7 @@
         </div>
 
         <div>
-            <h2>Trail</h2>
+            <h2>Trail <i class="fa-solid fa-tree"></i></h2>
             <h3>Saturday</h3>
             <h3>10K</h3>
             <h3>The Pheonix Park</h3>
@@ -136,23 +126,32 @@
         </div>
 
         <div>
-            <h2>Coffee</h2>
+            <h2>Coffee <i class="fa-solid fa-mug-hot"></i></h2>
             <h3>Sunday</h3>
             <h3>0K</h3>
             <h3>The MAerker Hotel</h3>
             <h3>11:30</h3>
         </div>
 
-
     </section>
 
 
+    <footer> 
+        <ul class="social-networks">
+            <li>
+                <a href="https://www.facebook.com"  target="_blank" rel="noopener" aria-label="Visit out Facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
 
-    <footer> social links here</footer>
+            <li><a href="https://www.twitter.com"  target="_blank" rel="noopener" aria-label="Visit out Facebook page (opens in new tab)"><i class="fa-brands fa-twitter"></i></a></li>
+
+            <li><a href="https://www.instagram.com"  target="_blank" rel="noopener" aria-label="Visit out Facebook page (opens in new tab)"><i class="fa-brands fa-instagram"></i></a></li>
+
+            <li><a href="https://www.youtube.com"  target="_blank" rel="noopener" aria-label="Visit out Facebook page (opens in new tab)"><i class="fa-brands fa-youtube"></i></i></a></li>
+        </ul>
+    </footer>
 
     <!-- font awsome script am ende damit es better wie websites läd-->
     <script src="https://kit.fontawesome.com/44e9a836a4.js" crossorigin="anonymous"></script>
 
 </body>
-
 </html>
