--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         <nav >
             <ul id="menu">
                 <li>
-                    <a href="#">Gallery</a>
-                </li>
-                <li>
                     <a href="#">Sign up</a>
                 </li>
+                <li>
+                    <a href="gallery.html" class="active">Gallery</a>
+                </li>
+               
                 <li>
                     <a href="index.html" class="active">Home</a>
                 </li>
